--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  width:100%; height:100%;
 }
 html, body {
-  margin: 0;
-  padding: 0;
   color: #1BA;
   background-color: #000;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 canvas {
   display: block;
 }
+
+.overlayContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  width: 100%;
+  height: 100%;
+}
+img {
+  border-radius: 8px;
+  position: relative;
+  z-index: 3;
+  height: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  top: 10%;
+}
+
+h1 {
+  font-family: sans-serif;
+  font-size: 3em;
+  text-align: center;
+  /* width: 100%; */
+}
+
+#firstName {
+  position: absolute;
+  left: -5%;
+  z-index: 5;
+  top: -1%;
+}
+
+#lastName {
+  position: absolute;
+  left: 5%;
+  z-index: 5;
+  top: 55%;
+}
+
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
